# mac_protein_folder_starter

./: .gitignore  README.md  base_query_1770515461.json  environment.yml  pyproject.toml
examples/: bench.fasta  gb1.fasta  lysozyme.fasta  tiny.fasta  ubiquitin.fasta
scripts/: benchmark.sh  run_example.sh  setup.sh
src/: cli.py  plot_results.py
src/macfold/: cli.py
