[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macfold"
version = "0.1.0"
description = "Mac-native wrapper CLI for OpenFold3-MLX inference"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["macfold"]
